fix : multi product payment
